# recall-memory

./: .dockerignore  .gitignore  ABLATION_RESULTS.md  BENCHMARK.md  DOMAIN_VOCAB_REVIEW.md  Dockerfile  LICENSE  P2_SCENARIOS.md  README.md  README.zh-TW.md  RECALL_P0_REVIEW_FEYNMAN.md  _ablation_deep.py  _ablation_test.py  _fair_test.py  cli.py  docker-compose.yml  embed.py  eval.py  eval_report.md  pyproject.toml  recall_p0.py  retrieve.py  show_hn_post.md  social_posts.md  social_posts_v2.md  store.py  test_ai_fair.db-shm  test_ai_fair.db-wal  weight_tuning_report.md
.gemini/: settings.json
.github/workflows/: ci.yml
demo/: demo_presentation.html  make_demo_video.py  recall-demo-data-playbook.md  recall-demo-real.cast  recall-demo-v3.cast  recall-demo.tape  recall-sqlite-demo-retention-design.md  recall-sqlite-demo-script.md  render_html_video.py
docs/: devlog.md  pitfalls.md  tiered-storage-promotion-evaluation.md
recall/: __init__.py
src/recall/: __init__.py  cli.py  config.py  embed.py  recall_mcp.py  retrieve.py  store.py
src/recall_memory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_core.py
