[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "recall-sqlite"
version = "0.2.0"
description = "Better contextual retrieval for AI agents. Three-path RRF retrieval in SQLite."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "typer>=0.9.0",
    "sqlite-vec>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
homepage = "https://github.com/Jnocode/recall-memory"
repository = "https://github.com/Jnocode/recall-memory"

[project.scripts]
recall = "recall.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
